disaggregation of parnaiba basin's data

--- a/analysis/ESTPLU_POR_BACIA.ipynb
+++ b/analysis/ESTPLU_POR_BACIA.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "Este *notebook* mostra como verificar se um ponto está contido dentro de uma *shape* usando a Biblioteca [GeoPandas](https://geopandas.org/index.html). Dessa forma poderemos classificar a qual bacia hidrográfica a medição de uma estação pluviométrica contribui.\n",
     "\n",
-    "*Este Notebook faz parte do escopo de um trabalho conjunto da Universidade Federal do Ceará (UFC), da Companhia de Gestão de Recursos Hídricos (COGERH) e da Fundação Cearense de Apoio ao Desenvolvimento Científico e Tecnológico (FUNCAP)*\n",
+    "*Este Notebook faz parte de uma colaboração da Universidade Federal do Ceará (UFC), da Companhia de Gestão de Recursos Hídricos (COGERH) e da Fundação Cearense de Apoio ao Desenvolvimento Científico e Tecnológico (FUNCAP) no âmbito do projeto de desenvolvimento de ferramentas tecnológicas de gestão para planejamento de recursos hídricos do estado do Ceará: Segurança hídrica e planejamento de secas*\n",
     "\n",
     "*Code by: Francisco Nogueira*"
    ]
@@ -185,8 +185,7 @@
     "Ponto 1: %s\n",
     "Ponto 2: %s\n",
     "Ponto 3: %s\n",
-    "\"\"\" %\n",
-    "      (quadrado.contains(ponto1),quadrado.contains(ponto2),quadrado.contains(ponto3))\n",
+    "\"\"\" % (quadrado.contains(ponto1),quadrado.contains(ponto2),quadrado.contains(ponto3))\n",
     ")"
    ]
   },
